--- a/rebar.config
+++ b/rebar.config
@@ -16,7 +16,7 @@
         {riak_kv, {git, "git://github.com/basho/riak_kv.git", {branch, "develop-3.0"}}},
         {riak_auth_mods, {git, "git://github.com/basho/riak_auth_mods.git", {branch, "develop-3.0"}}},
         {riak_repl, {git, "git://github.com/basho/riak_repl.git", {branch, "develop-3.0"}}},
-	{yokozuna, ".*", {git, "git://github.com/Sentenai/yokozuna.git", {tag, "riak-2.9.0-sentenai"}}},
+	{yokozuna, ".*", {git, "git://github.com/Sentenai/yokozuna.git", {tag, "merge_test"}}},
       ]}.
 
 {project_plugins, [
